<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_voice"
            android:icon="@drawable/ic_voice"
            android:title="@string/menu_voice" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <group android:id="@+id/group_info">
        <item
            android:id="@+id/nav_version"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="Versión"
            android:enabled="false" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>
    
</menu>