<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <!-- Login Fragment - Pantalla inicial -->
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.controloperador.ui.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.controloperador.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        
        <action
            android:id="@+id/action_home_to_chat"
            app:destination="@id/nav_chat" />
            
        <action
            android:id="@+id/action_home_to_voice"
            app:destination="@id/nav_voice" />
    </fragment>

    <!-- Gallery Fragment (Unidades) -->
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.controloperador.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <!-- Slideshow Fragment (Reportes) -->
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.controloperador.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    
    <!-- Chat Fragment (Mensajes de Texto) -->
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.controloperador.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />
    
    <!-- Voice Messages Fragment (Notas de Voz) -->
    <fragment
        android:id="@+id/nav_voice"
        android:name="com.example.controloperador.ui.voice.VoiceMessagesFragment"
        android:label="@string/menu_voice"
        tools:layout="@layout/fragment_voice_messages" />
</navigation>